[workspace]
resolver = "2"
members = [
    "wallet",
    "examples/example_wallet_electrum",
    "examples/example_wallet_esplora_blocking",
    "examples/example_wallet_esplora_async",
    "examples/example_wallet_rpc",
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]

[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
